--- a/g/gnupg2/package.xml
+++ b/g/gnupg2/package.xml
@@ -18,8 +18,8 @@
         <sources>
             <file src="gnupg2-2.1.18.tar.bz2" subdir="sources"
                 sha256sum="d04c6fab7e5562ce4b915b22020e34d4c1a256847690cf149842264fc7cef994"/>
-            <file src="patches.03.tar.gz" subdir="patches"
-                sha256sum="ffb11ea3c449fbd4a052c6a06d5d1f908d52e6e63c3188ac7a59cb0ed42eb329"/>
+            <file src="patches.06.tar.gz" subdir="patches"
+                sha256sum="8763ddb94a7940b09e8646f91b72afc4d17c89849e88943b29a2f0cb515f060c"/>
         </sources>
         
         <patches>
@@ -42,13 +42,23 @@
                 <file src="patches/0016-gpg-Print-a-warning-on-Tor-problems.patch"/>
                 <file src="patches/0017-agent-Fix-double-free.patch"/>
                 <file src="patches/0018-gpg-Fix-searching-for-mail-addresses-in-keyrings.patch"/>
+                <file src="patches/0019-dirmngr-New-option-no-use-tor-and-internal-changes.patch"/>
+                <file src="patches/0020-gpg-Remove-period-at-end-of-warning.patch"/>
+                <file src="patches/0021-gpg-Add-newline-to-output.patch"/>
+                <file src="patches/0022-gpg-Only-print-out-TOFU-statistics-for-conflicts-in-.patch"/>
+                <file src="patches/0023-gpg-If-there-is-a-TOFU-conflict-elide-the-too-few-me.patch"/>
+                <file src="patches/0024-gpg-Ensure-TOFU-bindings-associated-with-UTKs-are-re.patch"/>
+                <file src="patches/0025-gpg-Don-t-assume-that-strtoul-interprets-as-0.patch"/>
+                <file src="patches/0026-gpg-More-diagnostics-for-a-launched-pinentry.patch"/>
+                <file src="patches/0027-doc-Clarify-abbreviation-of-help.patch"/>
+                <file src="patches/0028-scd-Backport-two-fixes-from-master.patch"/>
+                <file src="patches/0029-scd-Fix-use-case-of-PC-SC.patch"/>
             </patchset>
         </patches>
 
         <requires>
             <package name="automake"/>
             <package name="autopoint"/>
-            <package name="autoconf"/>
             <package name="file"/>
             <package name="gettext"/>
             <package name="ghostscript"/>
@@ -76,7 +86,6 @@
     </source>
 
     <xi:include href="gnupg-agent.xml"/>
-    <xi:include href="scdaemon.xml"/>
     <xi:include href="gpgsm.xml"/>
     <xi:include href="gnupg.xml"/>
     <xi:include href="gnupg2.xml"/>
