--- a/o/opkg/package.xml
+++ b/o/opkg/package.xml
@@ -32,6 +32,8 @@
             <package name="libcurl4-nss-dev"/>
             <package name="libgpgme11-dev"/>
             <package name="libgpg-error-dev"/>
+            <package name="libsolv0-dev"/>
+            <package name="libsolvext0-dev"/>
         </requires>
 
         <!-- build rules -->
