libsigsegv: SIGSEGV_FAULT_STACKPOINTER patch for PowerPC

--- a/s/libsigsegv/package.xml
+++ b/s/libsigsegv/package.xml
@@ -17,10 +17,10 @@
         <sources>
             <file src="libsigsegv-2.10.tar.gz" subdir="sources"
                 sha256sum="8460a4a3dd4954c3d96d7a4f5dd5bc4d9b76f5754196aa245287553b26d2199a"/>
-            <file src="patches.05.tar.gz" subdir="patches"
+            <file src="patches.5.tar.gz" subdir="patches"
                 sha256sum="55238735bd389fdcb4738a4d4f2f39d5d0777154e13cc8f2ab5247a88b0f6572"/>
-            <file src="patches.bolt.tar.gz" subdir="patches"
-                sha256sum="1da1c0fa758ea9133284811667623ca0909407966d3b69467a3f28c2be81e4d2"/>
+            <file src="bolt.2.tar.gz" subdir="patches"
+                sha256sum="90321ecbbbbe42ddace6726df46c975ea85132964404cf9605dfa78299af96b0"/>
         </sources>
         
         <patches>
@@ -32,6 +32,7 @@
                 <file src="patches/aarch64-stack-direction.patch"/>
                 <!-- Bolt -->
                 <file src="patches/musl-uses-posix-fault.patch"/>
+                <file src="patches/fault-stack-pointer-powerpc.patch"/>
             </patchset>
         </patches>
 
