gmp: upgrade to new version from Debian Buster

--- a/g/gmp/package.xml
+++ b/g/gmp/package.xml
@@ -21,7 +21,15 @@
         <sources>
             <file src="gmp-6.1.2+dfsg.tar.xz" subdir="sources"
                 sha256sum="18016f718f621e7641ddd4e57f8e140391c5183252e5998263ffff59198a65b7"/>
+            <file src="debian-patches-4.tar.gz" subdir="patches"
+                sha256sum="bd06c3b8724b10fb914ac027ece7d7def59c382dd5f18adfd482ba200b605f54"/>
         </sources>
+
+        <patches>
+            <patchset subdir="sources">
+                <file src="patches/gmp-exception-sigfpe.patch"/>
+            </patchset>
+        </patches>
 
         <requires>
             <package name="m4"/>
