gcc/8: add debdiff to patchset

--- a/g/gcc/8/package.xml
+++ b/g/gcc/8/package.xml
@@ -24,6 +24,8 @@
 
         <patches>
             <patchset subdir="sources">
+                <file src="patches/gcc-8-8.3.0-6.debdiff"/>
+
                 <file src="patches/svn-updates.diff"/>
                 <file src="patches/gcc-gfdl-build.diff"/>
                 <file src="patches/gcc-textdomain.diff"/>
